	a client after loading them during login only because the login server does
	not have a central routine for saving client data before control is
	transferred to the game server.
	* Fixed infraction spam when changing channels while hide is disabled and
	is then enabled upon channel enter.

2012-09-10  GoldenKevin  (revision 134)

	* Removed a conditional in GameMap.spawnEntity and spawnExistingEntity.
	* Map players now see when a player updates his skin color, hair, face.
	* Simplified GameCenterPacketProcessor.processPartyFetchList.
	* Full support of Maple Messenger chat rooms.

2012-09-16  GoldenKevin  (revision 135)

	* MapFactory is now thread safe.
	* Added pirate job advancement NPC.
	* Added scripts to get players out of 2nd job advancement challenge maps.
	* Each player doing a 2nd job advancement challenge now gets his own
	instance of the map. events/change_job.js handles this for us.

2012-09-16  GoldenKevin  (revision 136)

	* Refactoring to reduce nesting in InterChannelCommunication and
	GameCenterPacketProcessor. Only methods in that class get large enough that
	early out (return in methods, continue in loops) can significantly reduce
	the maximum level of indentation compared to single-entry single-exit.
	* Calls to CenterServer.getAllServersOfWorld in GameCenterPacketProcessor
	moved to outer loop whenever applicable because repeatedly calling that in
	an inner loop is more expensive than getting the other Collection.

2012-09-17  GoldenKevin  (revision 137)

	* Support for the newest Kvj format.
	* Stubs for remaining Henesys area NPCs.
	* Stubs for several event NPCs.
	* Added Florina Beach NPC.
	* Added NimaKIN and KIN NPCs.
	* Fixed any possibility of client crash when choosing new eyes or hair.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.