@@ -1,0 +1,28 @@
+/*
+ * ArgonMS MapleStory server emulator written in Java
+ * Copyright (C) 2011-2012  GoldenKevin
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+/**
+ * Lord Jonathan (NPC 1092019)
+ * The Nautilus: Lord Jonathan's Room (Map 120000102)
+ *
+ * Small talk.
+ *
+ * @author GoldenKevin (content from KiniroMS r227)
+ */
+
+npc.say("Who are you talking to? Me? If you're just bored, go bother somebody else.");
